[tool.poetry]
name = "astral"
version = "0.1.0"
description = ""
authors = ["Rasha Moumneh <rasha@rasha.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
parse = "^1.20.2"
gunicorn = "^22.0.0"
webob = "^1.8.7"
pytest = "^8.2.2"
webtest = "^3.0.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
